rust/kitty_chess/erros.txt
   Compiling kitty_chess v0.1.0 (/home/arthur/documents/programs/code_scraps/rust/kitty_chess)
error[E0277]: the trait bound `Piece: Copy` is not satisfied
   --> src/main.rs:142:52
    |
142 |     let mut chess_board: [[Option<Piece>;8];8] = [[None; 8]; 8];
    |                                                    ^^^^
    |                                                    |
    |                                                    the trait `Copy` is not implemented for `Piece`
    |                                                    help: create an inline `const` block: `const { None }`
    |
    = note: required for `Option<Piece>` to implement `Copy`
    = note: the `Copy` trait is required because this value will be copied for each element of the array

For more information about this error, try `rustc --explain E0277`.
error: could not compile `kitty_chess` (bin "kitty_chess") due to 1 previous error
